<resources>
    <string name="app_name">UMC_Stepper</string>
    <string name="signup_title">딱 맞는 재활 운동을 위해 \n회원가입을 진행해요.</string>
    <string name="signup_sub_title">개인정보는 적합한 재활을 위한 정보 저장에\n사용됩니다.</string>
    <string name="signup_nickname">닉네임</string>
    <string name="signup_email">이메일</string>
    <string name="signup_pwd">비밀번호</string>
    <string name="signup_pwd_check">비밀번호 확인</string>
    <string name="signup_nickname_hint">닉네임을 입력하세요.</string>
    <string name="signup_email_hint">이메일 주소를 입력하세요.</string>
    <string name="signup_cert_number">인증번호 입력</string>
    <string name="signup_cert_error_msg">인증번호가 불일치합니다. 다시 확인해 주세요!</string>
    <string name="signup_pwd_hint">비밀번호를 입력하세요.</string>
    <string name="signup_pwd_check_hint">비밀번호를 다시 입력하세요</string>
    <string name="signup_pwd_error_check_msg">비밀번호가 일치하지 않습니다</string>
    <string name="signup_terms">[필수] 이용약관 및 개인정보 수집 동의</string>
    <string name="sign_up_cert_btn">인증번호 받기</string>
    <string name="sign_up_complete_btn">입력 완료</string>
    <string name="sign_up_go_terms"><u>내용보기</u></string>
    <string name="register_agree1">\n제 1 장 총칙\n\n제 1 조 (목적)\n본 약관은 통계청이 운영하는 나라통계시스템 운영홈페이지(이하 "당 사이트")에서 제공하는 모든 서비스(이하 "서비스")의 이용조건 및 절차, 이용자와 당 사이트의 권리, 의무, 책임사항과 기타 필요한 사항을 규정함을 목적으로 합니다.
        \n\n제 2 조 (약관의 효력과 변경)\n① 당 사이트는 이용자가 본 약관 내용에 동의하는 것을 조건으로 이용자에게 서비스를 제공하며, 당 사이트의 서비스 제공 행위 및 이용자의 서비스 사용 행위에는 본 약관을 우선적으로 적용하겠습니다.\n② 당 사이트는 본 약관을 사전 고지 없이 변경할 수 있으며, 변경된 약관은 당 사이트 내에 공지함으로써 이용자가 직접 확인하도록 할 것입니다. 이용자가 변경된 약관에 동의하지 아니하는 경우 본인의 회원등록을 취소(회원탈퇴)할 수 있으며, 계속 사용할 경우에는 약관 변경에 대한 암묵적 동의로 간주됩니다. 변경된 약관은 공지와 동시에 그 효력을 발휘합니다.
        \n\n제 3 조 (약관 외 준칙)\n본 약관에 명시되지 않은 사항은 전기통신기본법, 전기통신사업법, 정보통신망 이용촉진 및 정보보호 등에 관한 법률 및 기타 관련 법령의 규정에 의합니다.
        \n\n제 4 조 (용어의 정의)\n① 본 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n\t1. 이용자 : 본 약관에 따라 당 사이트가 제공하는 서비스를 받는 자\n\t2. 가 입 : 당 사이트가 제공하는 신청서 양식에 해당 정보를 기입하고, 본 약관에 동의하여 서비스 이용계약을 완료시키는 행위\n\t3. 회 원 : 당 사이트에 필요한 개인 정보를 제공하여 회원 등록을 한 자로서, 당 사이트의 정보 및 서비스를 이용할 수 있는 자\n\t4. 아이디 : 이용고객의 식별과 이용자가 서비스 이용을 위하여 이용자가 정한 문자와 숫자의 조합\n\t5. 비밀번호 : 아이디에 대한 본인 여부를 확인하기 위하여 사용되는 문자, 숫자, 특수문자 등의 조합
        \n\t6. 탈퇴 : 서비스 또는 회원이 이용계약을 종료하는 행위
        \n② 본 약관에서 정의하지 않은 용어는 개별서비스에 대한 별도 약관 및 이용규정에서 정의합니다.
    </string>
    <string name="register_agree2">\n1. 개인정보의 수집항목 및 수집방법\n통계청 나라통계사이트에서는 기본적인 회원 서비스 제공을 위한 필수정보로 실명인증정보와 가입정보로 구분하여 다음의 정보를 수집하고 있습니다. 필수정보를 입력해주셔야 회원 서비스 이용이 가능합니다.\n\n가. 수집하는 개인정보의 항목\n* 수집하는 필수항목\n\t
      - 실명인증정보 : 이름, 휴대전화번호, 본인 인증 또는 I-PIN(개인식별번호), GPKI \n\t- 가입정보 : 아이디, 비밀번호, 성명, 이메일, 전화번호, 휴대전화번호, 기관명 \n\n2. 개인정보의 수집/이용 목적 및 보유/이용 기간\n통계청 나라통계사이트에서는 정보주체의 회원 가입일로부터 서비스를 제공하는 기간 동안에 한하여 통계청 나라통계사이트 서비스를 이용하기 위한 최소한의 개인정보를 보유 및 이용 하게 됩니다. 회원가입 등을 통해 개인정보의 수집·이용, 제공 등에 대해 동의하신 내용은 언제든지 철회하실 수 있습니다. 회원 탈퇴를 요청하거나 수집/이용목적을 달성하거나 보유/이용기간이 종료한 경우, 사업 폐지 등의 사유발생시 개인 정보를 지체 없이 파기합니다.정보주체는 개인정보의 수집·이용목적에 대한 동의를 거부할 수 있으며, 동의 거부시 통계청 나라통계사이트에 회원가입이 되지 않으며, 통계청 나라통계사이트에서 제공하는 서비스를 이용할 수 없습니다.
        \n\n3. 수집한 개인정보 제3자 제공\n통계청 나라통계사이트에서는 정보주체의 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.
   </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_detail_alarm"><u>내용보기</u></string>

    <!-- 커뮤니티 -->
    <string name="Weekly_Mission">Weekly Mission</string>
    <string name="Weekly_Mission_Demo_day1">새롭게 만나본 STEPPER는 어떤가요?</string>
    <string name="Weekly_Mission_Demo_day2">자유롭게 STEPPER 사용 후기를 남겨주세요!</string>
    <string name="Weekly_Mission_Demo_day">새롭게 만나본 STEPPER는 어떤가요?\n자유롭게 STEPPER 사용 후기를 남겨주세요!</string>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>

    <string-array name="calendar_day_eng">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
</resources>