<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Purple_Black"
            tools:context=".ui.signup.SignUpActivity">

            <TextView
                android:id="@+id/signup_title_tv"
                style="@style/title_bold_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="56dp"
                android:text="@string/signup_title"
                android:textColor="@color/White"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/signup_sub_title_tv"
                style="@style/body_regular_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/signup_sub_title"
                android:textColor="@color/White"
                app:layout_constraintStart_toStartOf="@+id/signup_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/signup_title_tv" />

            <TextView
                android:id="@+id/signup_nickname_tv"
                style="@style/body_semi_bold_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/signup_nickname"
                android:textColor="@color/White"
                app:layout_constraintStart_toStartOf="@+id/signup_sub_title_tv"
                app:layout_constraintTop_toBottomOf="@+id/signup_sub_title_tv" />

            <EditText
                android:id="@+id/signup_nickname_et"
                style="@style/body_medium_14"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/radius_corners_50dp"
                android:hint="@string/signup_nickname_hint"
                android:inputType="text"
                android:paddingStart="24dp"
                android:textColor="@color/White"
                android:textColorHint="@color/Purple_Gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_nickname_tv" />

            <TextView
                android:id="@+id/signup_email_tv"
                style="@style/body_semi_bold_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/signup_email"
                android:textColor="@color/White"
                app:layout_constraintStart_toStartOf="@+id/signup_nickname_et"
                app:layout_constraintTop_toBottomOf="@+id/signup_nickname_et" />

            <EditText
                android:id="@+id/signup_email_et"
                style="@style/body_medium_14"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/radius_corners_50dp"
                android:hint="@string/signup_email_hint"
                android:inputType="textWebEmailAddress"
                android:paddingStart="24dp"
                android:textColor="@color/White"
                android:textColorHint="@color/Purple_Gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_email_tv" />

            <EditText
                android:id="@+id/signup_cert_number_et"
                style="@style/body_medium_14"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="17dp"
                android:background="@drawable/radius_corners_50dp"
                android:hint="@string/signup_cert_number"
                android:inputType="number"
                android:paddingStart="24dp"
                android:textColor="@color/White"
                android:textColorHint="@color/Purple_Gray"
                app:layout_constraintEnd_toStartOf="@+id/signup_receive_cert_num_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_email_et" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_receive_cert_num_btn"
                style="@style/body_medium_14"
                android:layout_width="140dp"
                android:layout_height="44dp"
                android:layout_marginEnd="23dp"
                android:background="@drawable/radius_corners_50dp"
                android:backgroundTint="@color/Purple_700"
                android:gravity="center"
                android:text="@string/sign_up_cert_btn"
                android:textColor="@color/White"
                app:layout_constraintBottom_toBottomOf="@+id/signup_cert_number_et"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/signup_cert_number_et" />

            <TextView
                android:id="@+id/signup_cert_error_tv"
                style="@style/body_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/signup_cert_error_msg"
                android:textColor="@color/Red_300"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/signup_cert_number_et"
                app:layout_constraintTop_toBottomOf="@+id/signup_cert_number_et" />

            <TextView
                android:id="@+id/signup_pwd_tv"
                style="@style/body_semi_bold_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/signup_pwd"
                android:textColor="@color/White"
                app:layout_constraintStart_toStartOf="@+id/signup_cert_number_et"
                app:layout_constraintTop_toBottomOf="@+id/signup_cert_error_tv" />

            <EditText
                android:id="@+id/signup_pwd_et"
                style="@style/body_medium_14"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/radius_corners_50dp"
                android:hint="@string/signup_pwd_hint"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:textColor="@color/White"
                android:textColorHint="@color/Purple_Gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_pwd_tv" />

            <TextView
                android:id="@+id/signup_pwd_check_tv"
                style="@style/body_semi_bold_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/signup_pwd_check"
                android:textColor="@color/White"
                app:layout_constraintStart_toStartOf="@+id/signup_pwd_et"
                app:layout_constraintTop_toBottomOf="@+id/signup_pwd_et" />

            <EditText
                android:id="@+id/signup_pwd_check_et"
                style="@style/body_medium_14"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/radius_corners_50dp"
                android:hint="@string/signup_pwd_check_hint"
                android:inputType="textPassword"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:textColor="@color/White"
                android:textColorHint="@color/Purple_Gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_pwd_check_tv" />

            <TextView
                android:id="@+id/signup_pwd_error_tv"
                style="@style/body_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/signup_pwd_error_check_msg"
                android:textColor="@color/Red_300"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/signup_pwd_check_et"
                app:layout_constraintTop_toBottomOf="@+id/signup_pwd_check_et" />

            <ImageView
                android:id="@+id/signup_terms_check_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_signup_terms_un_checked"
                app:layout_constraintStart_toStartOf="@+id/signup_pwd_error_tv"
                app:layout_constraintTop_toBottomOf="@+id/signup_pwd_error_tv" />

            <TextView
                android:id="@+id/signup_terms_check_tv"
                style="@style/body_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/signup_terms"
                android:textColor="@color/White"
                app:layout_constraintBottom_toBottomOf="@+id/signup_terms_check_iv"
                app:layout_constraintStart_toEndOf="@+id/signup_terms_check_iv"
                app:layout_constraintTop_toTopOf="@+id/signup_terms_check_iv" />

            <TextView
                android:id="@+id/signup_agree_tv"
                style="@style/body_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_up_go_terms"
                android:textColor="@color/Purple_700"

                app:layout_constraintBottom_toBottomOf="@+id/signup_terms_check_tv"
                app:layout_constraintStart_toEndOf="@+id/signup_terms_check_tv"
                app:layout_constraintTop_toTopOf="@+id/signup_terms_check_tv" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_complete_btn"
                style="@style/sub_title_semi_bold_16"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/radius_corners_61dp_stroke_1"
                android:text="@string/sign_up_complete_btn"
                android:textColor="@color/Purple_700"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_terms_check_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>